# gamecomp

./: .gitignore  .releaserc.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  build.rs
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  nested-backend.md
pkg/rpm/: gamecomp.spec
src/: config.rs  config_tests.rs  focus.rs  focus_tests.rs  frame_pacer.rs  frame_pacer_tests.rs  main.rs  render_thread.rs  retry.rs  retry_tests.rs  stats.rs  stats_tests.rs  test_harness.rs  test_harness_tests.rs  xwayland_mgr.rs
src/backend/: drm.rs  gpu_discovery.rs  gpu_discovery_tests.rs  headless.rs  headless_tests.rs  mod.rs  session.rs
src/backend/gpu/: mod.rs  vulkan_blitter.rs  vulkan_blitter_blit.rs  vulkan_blitter_device.rs  vulkan_blitter_images.rs  vulkan_blitter_modifiers.rs  vulkan_blitter_tests.rs
src/backend/wayland/: event_loop.rs  host_state.rs  mod.rs  mod_tests.rs
src/compositor/: mod.rs  scene.rs  scene_tests.rs  texture.rs  texture_tests.rs
src/compositor/shaders/: blit.comp  composite.comp
src/input/: keyboard.rs  keyboard_tests.rs  mod.rs  mod_tests.rs  pointer.rs
src/render/: color.rs  mod.rs  post_process.rs
src/wayland/: atoms.rs  mod.rs  mod_tests.rs  window_tracker.rs  window_tracker_tests.rs  xwayland.rs
src/wayland/protocols/: compositor.rs  data_device.rs  dmabuf.rs  mod.rs  output.rs  seat.rs  shm.rs  subcompositor.rs  wl_drm.rs  xdg_shell.rs
